左メニューをoverflow:auto & fixedに、参加者リストをアコーディオン化

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,21 @@
+/* bootstrap fixed navigation*/
+.sidebar-nav-fixed {
+    font-size: small;
+    padding: 9px 0;
+    position: fixed;
+    top: 60px;
+}
+
+.row-fluid > .span-fixed-sidebar {
+    margin-left: 290px;
+}
+
+.left-navigation {
+    max-height: 100%;
+    padding-bottom: 20px;
+    overflow: auto;
+}
+
 .character {
     font-size: small;
 }
